# uma-autoupdate

./: Cargo.toml  build.rs  version.toml  绘图1.vsdx
db/: version
src/: app.rs  download.rs  main.rs  modal.rs  utils.rs  version_data.rs  version_toml.rs  version_widget.rs
src-tauri/: Cargo.toml  tauri.conf.json  version.toml
src-tauri/src/: lib.rs  main.rs  version_toml.rs
