[package]
name = "uma-autoupdate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
indicatif = "0.17.8"
reqwest = { version = "0.12.4", features = ["blocking", "json", "stream"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.14"
yansi = "1.0.1"
