[package]
name = "uma-autoupdate"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
chrono = { version = "0.4.39", features = ["serde"] }
iced = { version = "0.13.1", features = ["image", "markdown"] }
reqwest = { version = "0.12.11", features = ["blocking"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
toml = "0.8.19"
