[package]
name = "uma-autoupdate"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true

[build-dependencies]
winres = "0.1.12"

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
chrono = { version = "0.4.39", features = ["serde"] }
env_logger = "0.10.2"
futures-channel = "0.3.31"
futures-core = "0.3.31"
futures-util = "0.3.31"
iced = { version = "0.13.1", features = ["image", "markdown", "advanced"] }
libc = "0.2.169"
log = "0.4.25"
native-dialog = { version = "0.7.0", features = ["windows_dpi_awareness", "windows_visual_styles"] }
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.11", features = ["stream" ] }
rust-embed = "8.5.0"
self-replace = "1.5.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sha1 = "0.10.6"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.19"
